services/user-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    tier: backend
spec:
  type:  ClusterIP
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 8181
