services/user-service/base/network-policy.yaml
### Rule Description
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-ingress-user
spec:
  podSelector:
    matchLabels:
      app: user
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx-ingress
    ports:
    - protocol: TCP
      port: 8181
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx-ingress
